markdown and docker-compose

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
+CONFLUENCE_SERVER_ID=BZ19-E1SC-JFNX-GPGR
+JIRA_SERVER_ID=BGEX-0VPX-I205-IQ0D
+
 JIRA_AUTH_TOKEN=dG9tZXJwcmllbGc6QEpUIXBKc2gkR2Q0KjNz
+POSTGRES_USER_JIRA=POSTGRES_USER_JIRA
+POSTGRES_PASSWORD_JIRA=POSTGRES_PASSWORD_JIRA
+POSTGRES_USER_CONFLUENCE=POSTGRES_USER_CONFLUENCE
+POSTGRES_PASSWORD_CONFLUENCE=POSTGRES_PASSWORD_CONFLUENCE
+
 NGROK_AUTH=UIHJPRMLHA3Q5LQY5BJZMKYXYZU2IJZY
