--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,3 +39,4 @@ services:
       - "8081:8080"
     volumes:
       - ./jenkins-data:/var/jenkins_home
+    command: /bin/sh -c "git config --global safe.directory '*'"
